--- a/index.html
+++ b/index.html
@@ -5,28 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>hw1</title>
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    <header>
+    <header class="header">
+        
     <nav>
-        <a href="index.html" lang="en"><span>Web</span>Studio</a>
-        <ul>
+        <a href="index.html" class="logo" lang="en"><span>Web</span>Studio</a>
+        <ul class="nav">
             <li><a href="">Студия</a></li>
             <li><a href="">Портфолио</a></li>
             <li><a href="">Контакты</a></li>
         </ul>
     </nav>
-        <ul>
+        <ul class="nav">
             <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
             <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
          </ul>
     </header>
     <main>
-        <section>
+        <section class="hero">
             <h1>Эффективные решения для вашего бизнеса</h1>
             <button type="button">Заказать услугу</button>
         </section>
-        <section>
+        <section class="section">
             <h2>Наши преимущества</h2>
             <ul>
                 <li>
@@ -47,7 +49,7 @@
                 </li>
             </ul>
         </section>
-        <section>
+        <section class="section">
             <h2>Чем мы занимаемся</h2>
             <ul>
                 <li>
@@ -61,7 +63,7 @@
                 </li>
             </ul>
         </section>
-        <section>
+        <section class="section">
             <h2>Наша команда</h2>
             <ul>
                 <li>
@@ -87,8 +89,8 @@
             </ul> 
         </section>
     </main>
-    <footer>
-        <a href="index.html" lang="en"><span>Web</span>Studio</a>
+    <footer class="footer">
+        <a href="index.html" lang="en" class="logo"><span>Web</span>Studio</a>
         <adress>
             <ul>
                 <li>г. Киев, пр-т Леси Украинки, 26</li>
