--- a/index.html
+++ b/index.html
@@ -5,20 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>hw1</title>
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    <header class="header">
-        
-    <nav>
+    <header class="header"> 
+    <nav class="nav">
         <a href="index.html" class="logo" lang="en"><span>Web</span>Studio</a>
-        <ul class="nav">
+        <ul>
             <li><a href="">Студия</a></li>
-            <li><a href="">Портфолио</a></li>
+            <li><a href="./portfolio.html">Портфолио</a></li>
             <li><a href="">Контакты</a></li>
         </ul>
     </nav>
-        <ul class="nav">
+        <ul class="contact">
             <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
             <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
          </ul>
@@ -30,7 +32,7 @@
         </section>
         <section class="section">
             <h2>Наши преимущества</h2>
-            <ul>
+            <ul class="section-list">
                 <li>
                     <h3>Внимание к деталям</h3>
                     <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
@@ -51,7 +53,7 @@
         </section>
         <section class="section">
             <h2>Чем мы занимаемся</h2>
-            <ul>
+            <ul class="section-list">
                 <li>
                     <img src="./images/markup.jpg" alt="Процесс разметки сайта" width="370">
                 </li>
@@ -65,7 +67,7 @@
         </section>
         <section class="section">
             <h2>Наша команда</h2>
-            <ul>
+            <ul class="section-list">
                 <li>
                     <img src="./images/img1.jpg" alt="person1" width="270">
                     <h3>Игорь Демьяненко</h3>
@@ -92,7 +94,7 @@
     <footer class="footer">
         <a href="index.html" lang="en" class="logo"><span>Web</span>Studio</a>
         <adress>
-            <ul>
+            <ul class="contact">
                 <li>г. Киев, пр-т Леси Украинки, 26</li>
                 <li><a href=mailto:info@example.com>info@example.com</a></li>
                 <li><a href=tel:+380991111111>+38 099 111 11 11</a></li>      
