--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header class="header"> 
     <nav class="nav">
         <a href="index.html" class="logo" lang="en"><span>Web</span>Studio</a>
-        <ul>
+        <ul class="nav-list">
             <li><a href="">Студия</a></li>
             <li><a href="./portfolio.html">Портфолио</a></li>
             <li><a href="">Контакты</a></li>
@@ -27,12 +27,12 @@
     </header>
     <main>
         <section class="hero">
-            <h1>Эффективные решения для вашего бизнеса</h1>
+            <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
             <button type="button">Заказать услугу</button>
         </section>
-        <section class="section">
+        <section class="features">
             <h2>Наши преимущества</h2>
-            <ul class="section-list">
+            <ul class="list">
                 <li>
                     <h3>Внимание к деталям</h3>
                     <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
@@ -51,9 +51,9 @@
                 </li>
             </ul>
         </section>
-        <section class="section">
+        <section class="work">
             <h2>Чем мы занимаемся</h2>
-            <ul class="section-list">
+            <ul class="list">
                 <li>
                     <img src="./images/markup.jpg" alt="Процесс разметки сайта" width="370">
                 </li>
@@ -65,9 +65,9 @@
                 </li>
             </ul>
         </section>
-        <section class="section">
+        <section class="team">
             <h2>Наша команда</h2>
-            <ul class="section-list">
+            <ul class="list">
                 <li>
                     <img src="./images/img1.jpg" alt="person1" width="270">
                     <h3>Игорь Демьяненко</h3>
