--- a/portfolio.html
+++ b/portfolio.html
@@ -32,77 +32,77 @@
                     <button type="button">Дизайн</button>
                     <button type="button">Маркетинг</button>
                 </div>
+                <h2>Проэкты</h2>
                 <ul class="project-cards">
-                    <h2>Проэкты</h2>
+                    
                     <li>
                         <a href="">
-                            <img src="./images/portfolio/imgcrack.jpg" alt=""width: 370px;/>
+                            <img src="./images/portfolio/imgcrack.jpg" alt="фото" width="370"/>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing</p>
-                            <h2>Технокряк</h2>
+                            <h3>Технокряк</h3>
                             <p>Веб-сайт</p>
                         </a>
                     </li>
                     <li>
                         <a href="">
-                            <img src="/images/portfolio/imgposter.jpg" alt=""width: 370px;/>
+                            <img src="/images/portfolio/imgposter.jpg" alt="" width="370"/>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing</p>
-                            <h2>Постер New Orlean vs Golden Star</h2>
+                            <h3>Постер New Orlean vs Golden Star</h3>
                             <p>Дизайн</p>
                         </a>
                     </li>
                     <li>
                         <a href="">
-                            <img src="/images/portfolio/imgrestr.jpg" alt=""width: 370px;/>
+                            <img src="/images/portfolio/imgrestr.jpg" alt="" width="370"/>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing</p>
-                            <h2>Ресторан Seafood</h2>
+                            <h3>Ресторан Seafood</h3>
                             <p>Приложение</p>
                         </a>
                     </li>
                     <li>
                         <a href="">
-                            <img src="/images/portfolio/imgprime.jpg" alt=""width: 370px;/>
+                            <img src="/images/portfolio/imgprime.jpg" alt="" width="370"/>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing</p>
-                            <h2>Проект Prime</h2>
+                            <h3>Проект Prime</h3>
                             <p>Маркетинг</p>
                         </a>
                     </li>
                     <li>
                         <a href="">
-                            <img src="/images/portfolio/imgbox.jpg" alt=""width: 370px;/>
+                            <img src="/images/portfolio/imgbox.jpg" alt="" width="370"/>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing</p>
-                            <h2>Проект Boxes</h2>
+                            <h3>Проект Boxes</h3>
                             <p>Приложение</p>
                         </a>
                     </li>
                     <li>
                         <a href="">
-                            <img src="/images/portfolio/imginspire.jpg" alt=""width: 370px;/>
+                            <img src="/images/portfolio/imginspire.jpg" alt="" width="370"/>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing</p>
-                            <h2 lang="en">Inspiration has no Borders</h2>
+                            <h3>Inspiration has no Borders</h3>
                             <p>Веб-сайт</p>
                         </a>
                     </li>
                     <li>
                         <a href="">
-                            <img src="/images/portfolio/imgpublish.jpg" alt=""width: 370px;/>
+                            <img src="/images/portfolio/imgpublish.jpg" alt="" width="370"/>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing</p>
-                            <h2>Издание Limited Edition</h2>
+                            <h3>Издание Limited Edition</h3>
                             <p>Дизайн</p>
                         </a>
                     </li>
                     <li>
                         <a href="">
-                            <img src="/images/portfolio/imglab.jpg" alt=""width: 370px;/>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing</p>
-                            <h2>Проект LAB</h2>
+                            <img src="/images/portfolio/imglab.jpg" alt="" width="370"/>                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing</p>
+                            <h3>Проект LAB</h3>
                             <p>Маркетинг</p>
                         </a>
                     </li>
                     <li>
                         <a href="">
-                            <img src="/images/portfolio/imggrow.jpg" alt=""width: 370px;/>
+                            <img src="/images/portfolio/imggrow.jpg" alt="" width="370"/>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing</p>
-                            <h2 lang="en">Growing Business</h2>
+                            <h3>Growing Business</h3>
                             <p>Приложение</p>
                         </a>
                     </li>
