--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <button type="button">Заказать услугу</button>
         </section>
         <section class="features">
-            <h2>Наши преимущества</h2>
+            <h2 class="visually-hidden">Наши преимущества</h2>
             <ul class="list">
                 <li>
                     <h3>Внимание к деталям</h3>
@@ -95,7 +95,7 @@
         <a href="index.html" lang="en" class="logo"><span>Web</span>Studio</a>
         <adress>
             <ul class="contact">
-                <li>г. Киев, пр-т Леси Украинки, 26</li>
+                <li><a href="">г. Киев, пр-т Леси Украинки, 26</a></li>
                 <li><a href=mailto:info@example.com>info@example.com</a></li>
                 <li><a href=tel:+380991111111>+38 099 111 11 11</a></li>      
             </ul>
