--- a/portfolio.html
+++ b/portfolio.html
@@ -25,20 +25,19 @@
         <main>
             <section class="projects">
                 <h1>Наши проэкты</h1>
-                <div class="nav-list">
-                    <button type="button">Все</button> 
-                    <button type="button">Веб-сайты</button>
-                    <button type="button">Приложения</button>
-                    <button type="button">Дизайн</button>
-                    <button type="button">Маркетинг</button>
-                </div>
+                <ul class="buttons">
+                    <li><button type="button">Все</button></li> 
+                    <li><button type="button">Веб-сайты</button></li>
+                    <li><button type="button">Приложения</button></li>
+                    <li><button type="button">Дизайн</button></li>
+                    <li><button type="button">Маркетинг</button></li>
+                </ul>
                 <h2>Проэкты</h2>
                 <ul class="project-cards">
                     
                     <li>
                         <a href="">
                             <img src="./images/portfolio/imgcrack.jpg" alt="фото" width="370"/>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing</p>
                             <h3>Технокряк</h3>
                             <p>Веб-сайт</p>
                         </a>
@@ -46,7 +45,6 @@
                     <li>
                         <a href="">
                             <img src="/images/portfolio/imgposter.jpg" alt="" width="370"/>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing</p>
                             <h3>Постер New Orlean vs Golden Star</h3>
                             <p>Дизайн</p>
                         </a>
@@ -54,7 +52,6 @@
                     <li>
                         <a href="">
                             <img src="/images/portfolio/imgrestr.jpg" alt="" width="370"/>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing</p>
                             <h3>Ресторан Seafood</h3>
                             <p>Приложение</p>
                         </a>
@@ -62,7 +59,6 @@
                     <li>
                         <a href="">
                             <img src="/images/portfolio/imgprime.jpg" alt="" width="370"/>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing</p>
                             <h3>Проект Prime</h3>
                             <p>Маркетинг</p>
                         </a>
@@ -70,7 +66,6 @@
                     <li>
                         <a href="">
                             <img src="/images/portfolio/imgbox.jpg" alt="" width="370"/>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing</p>
                             <h3>Проект Boxes</h3>
                             <p>Приложение</p>
                         </a>
@@ -78,7 +73,6 @@
                     <li>
                         <a href="">
                             <img src="/images/portfolio/imginspire.jpg" alt="" width="370"/>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing</p>
                             <h3>Inspiration has no Borders</h3>
                             <p>Веб-сайт</p>
                         </a>
@@ -86,7 +80,6 @@
                     <li>
                         <a href="">
                             <img src="/images/portfolio/imgpublish.jpg" alt="" width="370"/>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing</p>
                             <h3>Издание Limited Edition</h3>
                             <p>Дизайн</p>
                         </a>
@@ -101,7 +94,6 @@
                     <li>
                         <a href="">
                             <img src="/images/portfolio/imggrow.jpg" alt="" width="370"/>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing</p>
                             <h3>Growing Business</h3>
                             <p>Приложение</p>
                         </a>
